--- a/src/features/ButtonLanguage/ButtonLanguage.module.scss
+++ b/src/features/ButtonLanguage/ButtonLanguage.module.scss
@@ -1,6 +1,7 @@
 .img {
   height: 32px;
   width: 32px;
+  border-radius: 50%;
 }
 .button {
   height: 32px;
@@ -10,4 +11,5 @@
   font: inherit;
   color: inherit;
   background-color: transparent;
+  cursor: pointer;
 }
