--- a/src/pages/Biography/Biography.module.scss
+++ b/src/pages/Biography/Biography.module.scss
@@ -2,16 +2,15 @@
   display: flex;
   flex-direction: column;
   row-gap: 20px;
+  color: white;
 }
 
 .article {
   display: flex;
   padding: 15px;
   flex-direction: column;
-  border: 1px solid #42aaff;
   border-radius: 10px;
   row-gap: 10px;
-  box-shadow: 0 0 4px 6px #002f55;
 
   &-body {
     text-align: 'justify';
