--- a/src/pages/Uemk/Uemk.module.scss
+++ b/src/pages/Uemk/Uemk.module.scss
@@ -2,6 +2,7 @@
   &-title {
     font-size: 34px;
     color: white;
+
     text-align: center;
 
     &-kurs {
@@ -22,9 +23,23 @@
     margin-top: 8px;
   }
   &-lecture {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    align-items: start;
+
+    &-wrapper {
+      margin-bottom: 20px;
+      margin-top: 20px;
+    }
+
     &-title {
       text-align: left;
       color: black;
+    }
+    &-icon {
+      width: 16px;
+      margin-right: 4px;
     }
   }
 }
