--- a/src/pages/ReportSearch/ReportSearch.module.scss
+++ b/src/pages/ReportSearch/ReportSearch.module.scss
@@ -2,4 +2,11 @@
   overflow: hidden;
   border-radius: 6px;
   padding-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+}
+
+.titleTable {
+  color: white;
 }
