--- a/src/pages/Test/Test.module.scss
+++ b/src/pages/Test/Test.module.scss
@@ -1,6 +1,7 @@
 .profile {
   display: flex;
   justify-content: center;
-  height: 1000px;
+  height: 5500px;
   width: 600px;
+  background-color: white;
 }
