--- a/src/pages/Test/Test.module.scss
+++ b/src/pages/Test/Test.module.scss
@@ -1,7 +1,9 @@
 .profile {
   display: flex;
   justify-content: center;
+  padding: 20px;
+  border-radius: 6px;
   height: 5500px;
-  width: 600px;
+  width: 100%;
   background-color: white;
 }
